# libhex

./: CMakeLists.txt  README.md  package.json
include/: hex.h
src/: hex.c
test/: CMakeLists.txt  decode-invalid.c  decode-length.c  decode.c  encode-length.c  encode.c
